website/src/css/customTheme.scss
/* ... */
.table-of-contents,
.table-of-contents ul {
  font-size: 14px;
}

.table-of-contents .table-of-contents__link,
.table-of-contents .table-of-contents__link code {
  font-weight: 400 !important;
  font-size: 14px !important;
  color: var(--ifm-color-emphasis-700);
}

.table-of-contents__link--active,
.table-of-contents__link--active code,
.table-of-contents__link:hover,
.table-of-contents__link:hover code {
  color: var(--ifm-color-primary);
}

.table-of-contents__left-border {
  border-left-color: var(--ifm-color-emphasis-200);
}

/* Navbar */

.navbar {
  padding: 0;
  box-shadow: none;
  border-bottom: 1px solid var(--ifm-color-emphasis-200);

  .navbar__inner {
    max-width: 1360px;
    margin: 0 auto;

    &.navbar-sidebar--show {
      backdrop-filter: none;
    }
  }

  .navbar__title {
    font-weight: 700;
    font-size: 1.05rem;
    letter-spacing: -0.01em;
  }

  .navbar__brand:hover {
    color: var(--brand);
  }

  .navbar__link {
    font-size: 14px;
    transition:
      color 0.15s,
      background-color 0.15s;

    &:hover {
      color: var(--ifm-color-primary);
      background-color: var(--ifm-color-emphasis-100);
    }
  }

  .navbar__link--active {
    color: var(--ifm-color-primary);
    background-color: var(--navbar-active-item-background);

    &:hover {
      color: var(--ifm-color-primary);
      background-color: var(--navbar-active-item-background);
    }
  }

  .navbar-github-link,
  button[class*="toggleButton"] {
    transition: scale 0.2s;

    &:hover {
      background-color: var(--ifm-color-emphasis-100);
    }

    &:active {
      scale: 0.95;
    }
  }

  .navbar__item {
    border-radius: 6px;
    padding-inline: 12px;
    cursor: pointer;
    transition-property: scale;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 0.15s;

    &:active {
      scale: 0.97;
    }

    &.navbar__link {
      font-weight: 400;
      font-size: 17px;
      user-select: none;
    }

    &.dropdown:not(.dropdown--right) {
      a {
        font-weight: 400;
        font-size: 14px;
      }
    }

    &.dropdown--right {
      .dropdown__menu {
        min-width: 158px;
      }
    }
  }

  .dropdown {
    &.navbar__item:active {
      scale: none;
    }

    .navbar__link {
      &:hover {
        background-color: transparent;
      }
    }

    & > .navbar__link:after {
      margin-left: 8px;
      top: 1px;
      opacity: 0.75;
    }

    &:hover > .navbar__link:after {
      color: var(--brand);
    }
  }

  .navbar__logo {
    width: 38px;
    height: 34px;
  }

  .dropdown__menu {
    min-width: 120px;

    a.dropdown__link--active {
      font-weight: 600;
    }
  }

  .navbar__items {
    gap: 8px;
  }

  .navbar__items div[class^="navbarSearchContainer"] {
    padding-left: 6px;
  }

  .navbar-github-link {
    display: flex;
    height: 36px;
    width: 36px;
    padding: 0;
    align-items: center;
    justify-content: center;

    &:after {
      transition: opacity 0.2s;
      content: "";
      width: 20px;
      height: 20px;
      display: flex;
      background-color: var(--ifm-navbar-link-color);
      -webkit-mask: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
        center / 20px no-repeat;
      mask: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
        center / 20px no-repeat;
    }
  }

  .navbar-sidebar__back:hover {
    background: var(--ifm-code-background);
  }
}

html[data-theme="dark"] {
  .navbar-sidebar {
    background: var(--ifm-background-color);
  }
}

/*
Config has themeConfig.navbar.style === "dark"
But the navbar sidebar should still support light theme
So we need to "revert" some CSS vars to not enforce dark mode
 */
.navbar--dark {
  --ifm-menu-link-sublist-icon-filter: inherit; /* reset to non-dark value */
  --ifm-menu-color: inherit;
  --ifm-navbar-background-color: var(--divider);
}
/* ... */

